--- a/buoi 1.html
+++ b/buoi 1.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-  Xin chao hihihi
+  Xin chao 
     <script>
         console.log("Bi ngan vang")
     </script>
